--- a/src/Components/PrintableMerchSec.css
+++ b/src/Components/PrintableMerchSec.css
@@ -8,3 +8,72 @@
 .BgDarker:hover {
     background-color: #00000020;
 }
+
+.FirstCard {
+    left: 20%;
+}
+
+.SecondCard {
+    left: 50%;
+}
+
+.ThirdCard {
+    left: 80%;
+}
+
+.CardImg {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.CardImgDarker {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #00000060;
+    transition: 1s;
+    opacity: 0%;
+}
+
+.CardImgDarker:hover {
+    opacity: 100%;
+}
+
+.CardTitle {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+    font-size: 29px;
+    font-family: Roboto, 'serif';
+    letter-spacing: 2px;
+    text-align: center;
+    cursor: pointer;
+}
+
+.MoreBtn {
+    width: 150px;
+    height: 40px;
+    position: absolute;
+    top: 700px;
+    left: 50%;
+    transform: translate(-50%, 0);
+    font-size: 18px;
+    font-family: 'roboto';
+    text-align: center;
+    justify-content: center;
+    background-color: #5B5FC5;
+    border-radius: 10px;
+    border: none;
+    color: #fff;
+    cursor: pointer;
+    transition: 0.5s;
+}
+
+.MoreBtn:hover {
+    background-color: #414594;
+}
