--- a/src/Components/ReadymadeSec.css
+++ b/src/Components/ReadymadeSec.css
@@ -60,6 +60,7 @@ body {
     text-align: center;
     font-size: 18px;
     background: #fff;
+    cursor: pointer;
 
     /* Center slide text vertically */
     display: -webkit-box;
@@ -89,10 +90,43 @@ body {
     font-size: 14px;
     position: absolute;
     top: 343px;
+    cursor: pointer;
 }
 
 .swiper-slide h3 {
     font-size: 18px;
     position: absolute;
     top: 368px;
+    cursor: pointer;
+}
+
+.rms-add-to-cart-button {
+    display: inline-block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+    transition: 0.5s;
+    opacity: 0;
+}
+
+.rms-add-to-cart-button:hover {
+    width: 100%;
+    background-color: #ffffffaa;
+    opacity: 100%;
+}
+
+.rms-add-to-cart-icon {
+    font-size: 18px;
+    font-weight: 500;
+    font-family: 'Roboto Slab', sans-serif;
+    letter-spacing: 1px;
+    color: #000000;
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: block;
 }
