Changing of objects whenever size buttons are triggerd

--- a/src/Components/FeaturedProductsSec.css
+++ b/src/Components/FeaturedProductsSec.css
@@ -35,7 +35,7 @@
 /* /////////     Swiper Styles      /////////////////////// */
 
 
-.swiper {
+.slider {
     width: 100%;
     height: 400px;
     margin-top: 30px;
@@ -64,10 +64,13 @@
 .swiper-slide img {
     display: block;
     width: 100%;
-    height: 330px;
-    object-fit: cover;
     position: absolute;
     top: 0;
+}
+
+.slider-img {
+    height: 330px;
+    object-fit: cover;
 }
 
 .swiper-slide label {
