--- a/src/Components/ReadymadeSec.css
+++ b/src/Components/ReadymadeSec.css
@@ -50,7 +50,7 @@ body {
     padding: 0;
 }
 
-.swiper {
+.slider {
     width: 100%;
     height: 400px;
     margin-top: 30px;
@@ -80,10 +80,13 @@ body {
 .swiper-slide img {
     display: block;
     width: 100%;
-    height: 330px;
-    object-fit: cover;
     position: absolute;
     top: 0;
+}
+
+.slider-img {
+    height: 330px;
+    object-fit: cover;
 }
 
 .swiper-slide label {
