--- a/src/Pages/styles/product-view.css
+++ b/src/Pages/styles/product-view.css
@@ -2,3 +2,20 @@
     position: relative;
     margin-top: 60px;
 }
+
+#product-preview {
+    position: relative;
+    margin-top: 200px;
+    height: 600px;
+    width: 500px;
+    object-fit: contain;
+}
+
+#product-prev-img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    position: absolute;
+    top: 0;
+}
